Add FEN/Board example